--- a/Reports/Dissertation/bibliography.bib
+++ b/Reports/Dissertation/bibliography.bib
@@ -296,3 +296,11 @@ Year = {1998},
     title        = "Existential Import",
     howpublished = "http://cstl-cla.semo.edu/hhill/pl120/notes/existential\%20import.htm"
 }
+
+@inproceedings{muller2003return,
+  title={About the return on investment of test-driven development},
+  author={M{\"u}ller, Matthias M and Padberg, Frank},
+  booktitle={Edser-5 5 th international workshop on economic-driven software engineering research},
+  pages={26},
+  year={2003}
+}
