Fix whole circle filling issue

--- a/Reports/Dissertation/bibliography.bib
+++ b/Reports/Dissertation/bibliography.bib
@@ -304,3 +304,27 @@ Year = {1998},
   pages={26},
   year={2003}
 }
+
+@online{FlashInChrome,
+  author = {Anthony LaForge},
+  title = {Flash and Chrome},
+  year = 2016,
+  url = {https://blog.google/products/chrome/flash-and-chrome/},
+  urldate = {2017-04-06}
+}
+
+@online{StackCanvasTest,
+  author = {Andrew McGivery},
+  title = {How many stacked canvas elements is too much?},
+  year = 2013,
+  url = {http://mcgivery.com/how-many-stacked-canvas-elements-is-too-much/},
+  urldate = {2017-04-10}
+}
+
+@online{IBMCanvasLayers,
+  author = {Adam Ranfelt},
+  title = {Optimize HTML5 canvas rendering with layering},
+  year = 2012,
+  url = {https://www.ibm.com/developerworks/library/wa-canvashtml5layering/},
+  urldate = {2017-04-10}
+}
