--- a/Reports/Dissertation/Dissertation.tex
+++ b/Reports/Dissertation/Dissertation.tex
@@ -1225,7 +1225,7 @@ describe("Given a number of circles to setup", function () {
 });
 \end{lstlisting}
 
-By having a complete set of unit tests written for all testable functions it gives confidence that code will perform as intended.
+By having a complete set of unit tests written for all testable functions it gives confidence that code will perform as intended. lol
 \bibliographystyle{plainnat}
 \bibliography{bibliography} 
 
