--- a/Reports/Dissertation/bibliography.bib
+++ b/Reports/Dissertation/bibliography.bib
@@ -1,3 +1,12 @@
+@book{Sommerville:2006:SE:1196763,
+ author = {Sommerville, Ian},
+ title = {Software Engineering: (Update) (8th Edition) (International Computer Science)},
+ year = {2006},
+ isbn = {0321313798},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
+
 @book{oblinger2005educating,
   title={Educating the net generation},
   author={Oblinger, Diana and Oblinger, James L and Lippincott, Joan K},
